# AI_ExtractProduct

./: deepseek api.ipynb  deepseek_rnd.ipynb  gemini_rnd.ipynb  ollama_rnd.ipynb  product_extractions.db  products.json  products_deepseek.db  products_gemini.db  products_ollama_deepseek.db  products_ollama_gemma.db  pyproject.toml  rnd_voice_porduct.ipynb  streamlit-product-extraction-app.py
api_models/: __init__.py  deepseek_client.py  gemini_client.py  ollama_client.py
utils/: system_instruction.py
