[project]
name = "ai-extractproduct"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.5.0",
    "notebook>=7.3.2",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "spacy>=3.8.4",
    "streamlit>=1.43.2",
]
