[project]
name = "ai-extractproduct"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.5.0",
    "notebook>=7.3.2",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "spacy>=3.8.4",
    "speechrecognition>=3.14.1",
    "streamlit>=1.43.2",
]
